# uial

./: Cargo.toml
backend/: Cargo.toml
backend/src/: lib.rs  runner.rs  simple.rs
backend/src/wgpu/: draw.wgsl  erase.rs  image.rs  mod.rs  quad.rs
core/: Cargo.toml
core/examples/: canvas.rs  circles.rs  empty.rs  layout.rs
core/src/: application.rs  downcast.rs  drawer.rs  geometry.rs  graphics.rs  input.rs  interface.rs  lib.rs  prelude.rs  prop.rs  sizing.rs  state.rs  time.rs  unique.rs
core/src/drawer/: mod.rs  polyline.rs
core/src/drawer/text/: image_tt.rs  mod.rs
core/src/geometry/: mod.rs  sizing.rs  transform.rs
core/src/input/: dynamic.rs  mod.rs
core/src/react/: mod.rs  renege.rs  version.rs
core/src/widget/: build.rs  canvas.rs  dynamic.rs  empty.rs  extend.rs  fill.rs  image.rs  label.rs  minimize.rs  mod.rs  on_click.rs  on_key.rs  overlay.rs  pad.rs  prepare.rs  restrict.rs  stack.rs  switch.rs  with_padding.rs  with_sizing.rs  zoom_canvas.rs
examples/: simple.rs
geometry/: Cargo.toml
geometry/src/: continuous.rs  discrete.rs  lib.rs  time.rs
react/: Cargo.toml
react/src/: cache.rs  lib.rs  prop.rs  renege.rs
src/: lib.rs
wgpu/: Cargo.toml
wgpu/src/: draw_image.wgsl  drawer.rs  graphics.rs  lib.rs
widgets/: Cargo.toml
widgets/examples/: demo.rs
widgets/src/: button.rs  lib.rs  stretchable.rs  style.rs  text_button.rs
widgets/src/imp/: button.rs  mod.rs  stretchable.rs
