[package]
name = "uial-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
uial = { path = "../core" }
env_logger = "0.11"
pollster = "0.3"
wgpu = "24"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
palette ={ version = "0.7", features = ["bytemuck"] }
image = "0.25"
guillotiere = "0.6"
